feat: added gRPC service for make a payment, usecase defines the business logic used.

--- a/dev/src/main/resources/application.properties
+++ b/dev/src/main/resources/application.properties
@@ -2,3 +2,20 @@ quarkus.application.name=payment-processor
 
 quarkus.grpc.server.port=9000
 quarkus.grpc.server.host=0.0.0.0
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/payment_db
+
+quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=no-file
+
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.baseline-on-migrate=true
+quarkus.flyway.baseline-version=0
+quarkus.flyway.locations=classpath:db/migration
+
+quarkus.smallrye-health.root-path=/q/health
+
+quarkus.micrometer.export.prometheus.enabled=true
