--- a/dev/src/main/resources/application.properties
+++ b/dev/src/main/resources/application.properties
@@ -1,21 +1,33 @@
+# Application
 quarkus.application.name=payment-processor
 
-quarkus.grpc.server.port=9000
-quarkus.grpc.server.host=0.0.0.0
+# gRPC Server
+quarkus.grpc.server.port=${QUARKUS_GRPC_SERVER_PORT:9000}
+quarkus.grpc.server.host=${QUARKUS_GRPC_SERVER_HOST:0.0.0.0}
 
+# Database
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=postgres
-quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/payment_db
+quarkus.datasource.username=${QUARKUS_DATASOURCE_USERNAME:postgres}
+quarkus.datasource.password=${QUARKUS_DATASOURCE_PASSWORD:postgres}
+quarkus.datasource.jdbc.url=${QUARKUS_DATASOURCE_JDBC_URL:jdbc:postgresql://localhost:5432/payment_db}
 
+# Hibernate
+quarkus.hibernate-orm.database.generation=validate
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=no-file
 
+# Flyway
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.baseline-on-migrate=true
 quarkus.flyway.baseline-version=0
 quarkus.flyway.locations=classpath:db/migration
 
+# Package (para Docker)
+quarkus.package.jar.type=fast-jar
+
+# Health Check
 quarkus.smallrye-health.root-path=/q/health
 
+# Metrics
 quarkus.micrometer.export.prometheus.enabled=true
+quarkus.micrometer.export.prometheus.path=/q/metrics
